--- a/Gerador de Senhas - 3B - N24/index.html
+++ b/Gerador de Senhas - 3B - N24/index.html
@@ -7,8 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="cadeado fechado" alt="cadeado fechado">
-    <h2 class="titulo-principal">Gerador De Senhas</h2>
-    <h3 class="titulo-secundario">Gere instantaneamente uma senha aleatória e segura</h3>
+    <section class="conteudo">
+        <div class="conteudo-titulo">
+            <img src="" alt="cadeado fechado">
+            <h2 class="titulo-principal">Gerador de Senhas</h2>
+            <h3 class="titulo-secundario">Gere instantaneamente uma senha aleatória e segura</h3>
+        </div>
+        <div class="conteudo-senha">
+            <label for="senha">Senha</label>
+            <input type="text" name="senha" id="campo-senha">
+        </div>
+    </section>
 </body>
 </html>
