--- a/Gerador de Senhas - 3B - N24/index.html
+++ b/Gerador de Senhas - 3B - N24/index.html
@@ -17,6 +17,41 @@
             <label for="senha">Senha</label>
             <input type="text" name="senha" id="campo-senha">
         </div>
+        <div class="parametro">
+            <h3 class="parametro-titulo">Personalize sua senha</h3>
+            <div class="parametro-coluna__senha">
+                <div class="parametro-senha">
+                    <h4 class="parametro-senha__titulo">Número de Caracteres</h4>
+                    <div class="parametro-senha-botoes">
+                        <button class="parametro-senha__botao">-</button>
+                        <p class="parametro-senha__texto">12</p>
+                        <button class="parametro-senha__botao">+</button>
+                    </div>
+                </div>
+                <div class="parametro-senha">
+                    <h4 class="parametro-senha__titulo">Características da Senha</h4>
+                    <div class="paramentro-senha-checkbox">
+                        <input name="maiusculo" type="checkbox" class="checkbox">
+                        <label for="maiusculo">Letras Maiúsculas</label>
+                    </div>
+                    <div class="parametro-senha-checkbox">
+                        <input name="minusculo" type="checkbox" class="checkbox">
+                        <label for="minusculo">Letras Minúsculas</label>
+                    </div>
+                    <div class="parametro-senha-checkbox">
+                        <input name="numero" type="checkbox" class="checkbox">
+                        <label for="numero">Números</label>
+                    </div>
+                    <div class="parametro-senha-checkbox">
+                        <input name="simbolos" type="checkbox" class="checkbox">
+                        <label for="simbolos">Símbolos</label>
+                    </div>
+                </div>
+                <div class="parametro-senha">
+                    <h4 class="parametro-senha__titulo">Força da Senha</h4>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
